--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@600&display=swap");
 
+:root {
+  --clr--primary: #222;
+  --clr--secondary: #333;
+  --clr-basic: #eee;
+  --clr-again-primary: #11572e;
+  --clr-again-hover: #136133;
+  --clr-hotter-primary: #be1013;
+  --clr-hotter-secondary: #e45323;
+  --clr-colder-primary: #aad4e5;
+  --clr-colder-secondary: #066f99;
+
+  --clr-check-secondary: #bf953f;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -17,21 +31,26 @@ html {
 
 body {
   font-family: "Press Start 2P", sans-serif;
-  color: #eee;
-  background-color: #222;
+  color: var(--clr-basic);
+  background-color: var(--clr--primary);
   /* background-color: #60b347; */
 }
 
 /* LAYOUT */
+.container {
+  margin-inline: auto;
+  width: min-content;
+}
+
 header {
   position: relative;
   height: 35vh;
-  border-bottom: 7px solid #eee;
+  border-bottom: 7px solid var(--clr-basic);
 }
 
 main {
   height: 65vh;
-  color: #eee;
+  color: var(--clr-basic);
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -79,18 +98,18 @@ h1 {
 
 .btn {
   text-align: center;
-  display: inline-block;
+  display: flex;
   margin: 5px;
   font-weight: bold;
   padding: 10px 0 10px 10px;
   background-color: #11572e;
   text-shadow: -1px -1px #222, 1px 1px #222;
-  color: #eee;
+  color: var(--clr-basic);
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
   border-radius: 7px;
-  box-shadow: 0 2px #11572e;
+  box-shadow: 0 2px var(--clr-again-primary);
   font-size: 2rem;
   font-family: inherit;
   cursor: pointer;
@@ -103,12 +122,12 @@ h1 {
 }
 
 .btn:hover {
-  background-color: #136133;
+  background-color: var(--clr-again-hover);
 }
 
 .number {
-  background: #eee;
-  color: #333;
+  background: var(--clr-basic);
+  color: var(--clr--secondary);
   font-size: 6rem;
   width: 15rem;
   padding: 3rem 0rem;
@@ -121,7 +140,7 @@ h1 {
 
 .guess {
   background: none;
-  border: 4px solid #eee;
+  border: 4px solid var(--clr-basic);
   font-family: inherit;
   color: inherit;
   font-size: 5rem;
@@ -139,19 +158,20 @@ h1 {
 .hotter-colder .hotter-message {
   margin-right: 15px;
   display: inline-block;
-  color: #eee;
+  color: var(--clr-basic);
   font-family: "Yanone Kaffeesatz", sans-serif;
   font-size: 2.5rem;
   margin: 5px;
   font-weight: bold;
   font-style: oblique;
   padding: 10px;
-  background-color: #be1013;
+  background-color: var(--clr-hotter-primary);
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
   border-radius: 7px;
-  box-shadow: 2.5px 2.5px #e45323, -2.5px -2.5px #e45323;
+  box-shadow: 2.5px 2.5px var(--clr-hotter-secondary),
+    -2.5px -2.5px var(--clr-hotter-secondary);
 }
 
 .hotter-colder .colder-message {
@@ -163,12 +183,13 @@ h1 {
   margin: 5px;
   font-weight: bold;
   padding: 10px;
-  background-color: #aad4e5;
+  background-color: var(--clr-colder-primary);
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
   border-radius: 7px;
-  box-shadow: 2.5px 2.5px #066f99, -2.5px -2.5px #066f99;
+  box-shadow: 2.5px 2.5px var(--clr-colder-secondary),
+    -2.5px -2.5px var(--clr-colder-secondary);
 }
 
 .label-score {
@@ -189,13 +210,13 @@ h1 {
     #fbf5b7,
     #aa771c
   );
-  text-shadow: -1px -1px #eee, 1px 1px #eee;
+  text-shadow: -1px -1px var(--clr-basic), 1px 1px var(--clr-basic);
   color: #222;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
   border-radius: 7px;
-  box-shadow: 0 2px #bf953f;
+  box-shadow: 0 2px var(--clr-check-secondary);
   font-size: 2rem;
   font-family: inherit;
   cursor: pointer;
