--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,6 @@ body {
   font-family: "Press Start 2P", sans-serif;
   color: var(--clr-basic);
   background-color: var(--clr--primary);
-  /* background-color: #60b347; */
 }
 
 /* LAYOUT */
@@ -221,3 +220,49 @@ h1 {
   font-family: inherit;
   cursor: pointer;
 }
+
+/* .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: var(--clr--primary);
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid var(--clr-basic);
+  width: 80%;
+}
+
+.modal-button {
+  display: block;
+  font-size: 1.5rem;
+  width: 20rem;
+  padding: 3rem 0rem;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 47%;
+  transform: translate(-50%, 50%);
+}
+
+.close {
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #ccc;
+  text-decoration: none;
+  cursor: pointer;
+} */
