--- a/src/style.css
+++ b/src/style.css
@@ -83,8 +83,8 @@ h1 {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 52%;
-  left: 50%;
+  top: 50%;
+  left: 53%;
   transform: translate(-50%, -50%);
 }
 
@@ -129,11 +129,11 @@ h1 {
   color: var(--clr--secondary);
   font-size: 6rem;
   width: 20rem;
-  padding: 3rem 0rem;
+  padding: 5rem 0rem 5rem 0rem;
   text-align: center;
   position: absolute;
   bottom: 0;
-  left: 47%;
+  left: 50%;
   transform: translate(-50%, 50%);
 }
 
@@ -210,7 +210,7 @@ h1 {
     #aa771c
   );
   text-shadow: -1px -1px var(--clr-basic), 1px 1px var(--clr-basic);
-  color: #222;
+  color: var(--clr--primary);
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
@@ -221,7 +221,7 @@ h1 {
   cursor: pointer;
 }
 
-/* .modal {
+.modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -230,7 +230,6 @@ h1 {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -240,24 +239,50 @@ h1 {
   padding: 20px;
   border: 1px solid var(--clr-basic);
   width: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .modal-button {
-  display: block;
+  display: none;
   font-size: 1.5rem;
   width: 20rem;
   padding: 3rem 0rem;
   text-align: center;
   position: absolute;
-  bottom: 0;
-  left: 47%;
+  top: 29.5%;
+  left: 50%;
   transform: translate(-50%, 50%);
+}
+
+.reward-button {
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 0 10px 10px;
+  background-color: var(--clr--basic);
+  color: var(--clr--secondary);
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -o-border-radius: 7px;
+  border-radius: 7px;
+  box-shadow: 0 2px var(--clr-secondary);
+  font-family: inherit;
+  font-size: 9px;
+  cursor: pointer;
+}
+
+.reward-button:hover,
+.reward-button:focus {
+  background-color: #ccc;
 }
 
 .close {
   float: right;
   font-size: 28px;
+  color: var(--clr-basic);
   font-weight: bold;
+  position: relative;
+  left: 35px;
 }
 
 .close:hover,
@@ -265,4 +290,8 @@ h1 {
   color: #ccc;
   text-decoration: none;
   cursor: pointer;
-} */
+}
+
+/* Mobile */
+@media only screen and (min-width: 750px) {
+}
